--- a/main.tex
+++ b/main.tex
@@ -113,12 +113,12 @@ keys]{ cryptocode }
     \begin{aquote}{Serge Lang}
     It is possible to write endlessly on elliptic curves. \\ (This is not a threat.)
     \end{aquote}
-
+    \pause
     \begin{itemize}
-        \item<1-> Elliptic curves are everywhere in cryptography
-        \item<2-> Power $\approx 70\%$ of TLS Exchanges
-        \item<3-> Coolest post quantum cryptography proposal
-        \item<4-> Fascinating mathematically
+        \item<2-> Elliptic curves are everywhere in cryptography
+        \item<3-> Power $\approx 70\%$ of TLS Exchanges
+        \item<4-> Coolest post quantum cryptography proposal
+        \item<5-> Fascinating mathematically
     \end{itemize}
 \end{frame}
 
